--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Stackbit Vanilla Theme",
+    "title": "",
     "path_prefix": "/",
     "description": "A vanilla theme for Stackbit",
     "header": {
