--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,7 +1,7 @@
 {
     "title": "Blog",
     "path_prefix": "/",
-    "description": "A vanilla theme for Stackbit",
+    "description": "Word",
     "header": {
         "title": "Stackbit Vanilla",
         "has_nav": true,
